crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8483 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -375,7 +375,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Po uložení zůstat na stránce s 
 foxtrick.MatchOrderInterface.SwapPositions.desc=Zobrazot odkaz pro přehození hráčů z levé na pravou stranu
 foxtrick.MatchSimulator.desc=Na stránku zápasových pokynů přidává simulátor zápasů
 foxtrick.MatchSimulator.RatingsOnTop.desc=Předpověď hodnocení ponechat nahoře
-foxtrick.MatchSimulator.RatingsBellow.desc=Předpověď hodnocení zobrazit dole
+foxtrick.MatchSimulator.RatingsBelow.desc=Předpověď hodnocení zobrazit dole
 foxtrick.MatchSimulator.RatingsRight.desc=Předpověď hodnocení zobrazit napravo
 foxtrick.HeaderToggle.desc=Kliknutím na nadpisy druhé úrovně (h2) přepíná viditelnost následujícího oddílu. Pamatuje si poslední nastavení dle jednotlivých stránek a nadpisů
 foxtrick.Filter.desc=Do horní části stránky se seznamem hráčů přidává filtry
