--- a/content/locale/es-MX/foxtrick.properties
+++ b/content/locale/es-MX/foxtrick.properties
@@ -15,6 +15,7 @@
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
+pluralFormRuleID=1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -86,7 +87,15 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Incurstar videos de YouTube
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Incrustar videos de Vimeo
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=incrustar videos de FunnyOrDie
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Incrustar videos deDailymotion
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Usar oEmbed para incrustar media (solo para Chrome)
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Reemplazar el texto del enlace por la etiqueta del elemento multimedia, p.ej el nombre de la imagen
+foxtrick.EmbedMedia.EmbedSoundCloud.desc=Insertar desde Soundcloud
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Insertar imÃ¡genes de Flickr
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Insertar imÃ¡genes de Devianart
+foxtrick.EmbedMedia.EmbedGenericImages.desc=Insertar imÃ¡genes si el enlace conduce a una imagen
+foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Trata de adivinar la direcciÃ³n correcta de la imagen; incluso si el enlace original, inicialmente, no aparece estar apuntando a una imagen.
 #Forum direct page links
+foxtrick.DirectPageLinks.desc=Agrega enlaces que te permiten saltar a una pÃ¡gina determinada en un hilo del foro.
 #
 foxtrick.CopyPostID.desc=Enlace para copiar el PostId
 foxtrick.CopyPosting.desc=Añade un icono para copiar el mensaje incluyendo referencias
@@ -117,6 +126,7 @@ foxtrick.LinksAchievements.desc=Añadir algunos enlaces externos a la página de l
 foxtrick.LinksStaff.desc=Añadir algunos enlaces externos a la página del Staff
 foxtrick.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 foxtrick.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
+foxtrick.LoyalityDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu pÃ¡gina personal del jugador (sÃ³lo funciona con la opciÃ³n "Mostrar barras de habilidades" activada en las preferencias de HT)
 foxtrick.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 foxtrick.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
 # please translate next lines again if needed
@@ -144,12 +154,14 @@ foxtrick.ConfirmActions.StaffChange.desc=Contratar/despedir especialistas
 foxtrick.PersonalityImages.desc=Añadir números de colores que reflejen el carácter, honestidad y agresividad en la página del jugador
 foxtrick.HideSignatures.desc=Ocultar la firma en los mensajes del foro y mostrar un enlace de 'Firma' en su lugar
 foxtrick.MarkUnread.desc=Añadir un enlace para resaltar los mensajes no leídos desde el mensaje actual.
+foxtrick.ForumModeratorIconLinks.desc=Agregar iconos para acceder a las funciones del moderador en la parte superior de los hilos, cuando estÃ© disponible
 foxtrick.ForumNextAndPrevious.desc=Eliminar los botones de 'Siguiente' y 'Anterior' en la conferencia si están deshabilitados
 foxtrick.ForumLastPost.desc=Saltar al ultimo mensaje en lugar de saltar al primer mensaje de un tema ya leído
 foxtrick.ForumLastPost.lastpage.desc=Saltar a la última página, no al ultimo mensaje
 foxtrick.MatchPlayerColouring.desc=Colorear los nombres de los jugadores dependiendo de su equipo en el reporte del partido. Usando enlaces en la página del jugador, resalta al jugador solamente.
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado del jugador propio
 foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Agregar iconos especÃ­fico a un evento.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate el coloreado del equipo propio
 foxtrick.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 foxtrick.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
@@ -233,6 +245,7 @@ foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de lig
 foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
 foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
+foxtrick.GoalDifferenceToTables.desc=Agrega una columna adicional para la diferencia de goles en la tabla de promociÃ³n, asÃ­ como en las tablas de liga antiguas
 foxtrick.CrossTable.desc=Añade una tabla extra al Calendario de Partidos, donde se presentan todos los resultados de los partidos de la liga, incluyendo una gráfica con las posiciones de la liga
 foxtrick.ElectionTable.desc=Añade porcentajes a la tabla de elecciones (solo se cuentan los votos mostrados, no todos)
 foxtrick.ContextMenuCopy.desc=Añade opciones dentro del menú contextual para copiar ID y/o enlace y contenido en HT-ML
@@ -362,11 +375,13 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Permanacer en la página de instrucc
 foxtrick.MatchOrderInterface.SwapPositions.desc=Añade un enlace para intercambiar jugadores de izquierda a derecha
 foxtrick.MatchSimulator.desc=Añade un simulador de partidos a la inerfaz de instrucciones
 foxtrick.MatchSimulator.RatingsOnTop.desc=Mantiene la predicción de calificaciones en la parte superior
-foxtrick.MatchSimulator.RatingsBellow.desc=Mostrar la predicción en la parte inferior
+foxtrick.MatchSimulator.RatingsBelow.desc=Mostrar la predicción en la parte inferior
 foxtrick.MatchSimulator.RatingsRight.desc=Mostrar la predicción en la parte derecha
 foxtrick.HeaderToggle.desc=Al hacer clic en los encabezados h2 se alterna mostrar y ocultar la siguiente sección. Recuerda el último ajuste de forma individual según el tipo de página y el título de encabezado
 foxtrick.Filter.desc=Añade filtros a la página de Mejores Jugadores
 foxtrick.RatingsDisplay.desc=Mostrar las calificaciones promedio en estadisticas dentro del rango 0-20
+foxtrick.RatingsDisplay.DenominationsRange.desc=En el rango de denominaciones 0 a 20
+foxtrick.RatingsDisplay.HatStats.desc=Como Hatstats
 
 # -----------------------------------------------------------------------------
 
@@ -374,6 +389,7 @@ foxtrick.RatingsDisplay.desc=Mostrar las calificaciones promedio en estadisticas
 # IN-GAME STRINGS. translate first
 
 #Embed Media
+foxtrick.EmbedMedia.EmbeddedImage=Imagen incustrada
 
 #icons
 foxtrick.ExtraShortcuts.statistics=Estadísticas
@@ -413,6 +429,7 @@ foxtrick.TeamStats.TransferListed.label=En Venta
 foxtrick.TeamStats.Pictures.label=Imágenes
 foxtrick.TeamStats.PlayedLatest.label=Jugaron el último partido
 foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
+foxtrick.TeamStats.NotTransferListed.label=No en la lista de Trasnferencias
 foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jugadores canteranos
 foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
@@ -556,6 +573,7 @@ matchOrder.AddMatchManually=Añadir un partido manualmentedd a match manually
 matchOrder.swapPositions=Intermcabiar posiciones
 matchOrder.options=Opciones
 matchOrder.staminaDiscount=Descuento por condición
+matchOrder.staminaDiscount.title=Las calificaciones del sector tienen un descuento de acuerdo a la contribuciÃ³n de los jugadores de ese sector
 matchOrder.summary=Resumen
 
 #Skills
@@ -639,6 +657,8 @@ PlayerNumber.abbr=\#
 TSI=Total Skill Index
 TSI.abbr=TSI
 
+CanBePromotedIn=Puede ser promocionado en
+CanBePromotedIn.abbr=Prom
 
 Personality=Personalidad
 Agreeability=Carácter
@@ -678,6 +698,8 @@ Last_match=Último partido
 Last_match.abbr=Último
 Last_stars=Estrellas
 Last_stars.abbr=Est
+Last_stars_EndOfGame=Ãšltimas estrellas al final del juego
+Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Disminución última estrella
 Last_stars_decline.abbr=Dif
 Last_position=Latest Posición
@@ -812,6 +834,7 @@ CopyYouth.fixturesSource=Copiar el código de la clasificación
 CopyYouth.fixturesSource.copied=El código de la clasificación ha sido copiado
 CopyYouth.goto=Ir a %s
 
+MatchReportFormat.MatchReport=Reporte del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Patada inicial
 MatchReportFormat.halfTime=Medio tiempo
@@ -873,6 +896,7 @@ less=menos...
 TeamPopupLinks.prefsCaption=Preferencias de Elnace
 TeamPopupLinks.ShowByDefault=Mostrar por defecto
 TeamPopupLinks.ShowOnMore=Mostrar Más
+TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaÃ±a
 
 total_stars=Total de estrellas
 
@@ -1029,6 +1053,7 @@ sort.up=Arriba
 sort.down=Abajo
 action.clearCache=Borrar cache
 action.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
+featureHighlight.title=Haz clic para resaltar la mayor parte de las caracterÃ­sticas de FoxTrick
 
 # fennec ui
 pageAction.rightSidebar=Mostrar barra dereacha
@@ -1052,6 +1077,7 @@ button.import=Importar
 button.restoreDefault=Restaurar predeterminado
 button.deleteToken=Borrar token
 button.disableAll=Deshabilitar todo
+button.revokePermissions=Revocar los permisos
 
 status.loading=Cargandoâ€¦
 status.loading.abbr=â€¦
@@ -1080,6 +1106,7 @@ exception.error=Error %s
 foxtrick=FoxTrick
 preferences=Preferencias
 foxtrick.prefs.preferences=Preferencias de FoxTrick
+foxtrick.log.header=Log de Foxtrick
 # keep the following line untranslated
 foxtrick.log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
@@ -1118,9 +1145,11 @@ foxtrick.prefs.oauth.delete=Borrar el token OAuth del equipo seleccionado.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Solo aplica para este navegador. Para quitar definitavamente el acceso de Foxtrick a tu equipo, ve al manejo de CHPP de Hattrick\: {CHPP management}
 foxtrick.prefs.labelDisableAll=Deshabilitar todos los módulos
+foxtrick.prefs.labelRevokePermissions=Revocar todos los permisos opcionales (Chrome solamente)
 foxtrick.prefs.labelSavePrefs=Exportar las preferencias y/o configuración personal
 foxtrick.prefs.labelSavePrefs_Prefs=Preferencias
 foxtrick.prefs.labelSavePrefs_Notes=Configuración personal (notas, plantillas y enlaces personalizados)
+foxtrick.prefs.labelSavePrefs_Token=Token/Secreto OAuth
 foxtrick.prefs.saveNotice=Copiar el contenido en el área de texto y guardarlo como archivo, para poder importar tus preferencias en el futuro.
 foxtrick.prefs.labelLoadPrefs=Importar preferencias (Las preferencias actuales serán sobreescritas)
 foxtrick.prefs.loadNotice=Pega tus preferencias guardadas en el cuadro de texto y presiona "Importar".
@@ -1161,11 +1190,13 @@ prefs.view.by.page=Ver de acuerdo a última página de HT
 delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
 delete_oauth_ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s? 
 disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
+revoke_permissions_ask=Â¿EstÃ¡s seguro que deseas revocar todos los permisos opcionales?
 
 foxtrick.prefs.AdditionalOptions=Opciones Adicionales
 foxtrick.prefs.smallcopyicons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
 foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick page (for developers)
 
+foxtrick.prefs.permissionsHint=%s necesita el permiso para trabajar. Permite el acceso en el siguiente cuadro de diÃ¡logo.
 
 ###EOF
 
