--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -31,6 +31,10 @@ foxtrick.AttVsDef.oldstyle.desc=vello estilo
 foxtrick.AttVsDef.newstyle.desc=novo estilo
 #Ratings
 foxtrick.Ratings.desc=Engade as cualificacións á páxina do encontro
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
 foxtrick.BookmarkAdjust.desc=Cambia a icona asociada a un marcador insertando no comentario do mesmo o código correspondente entre corchetes\: p.ex. [cyan] mostra a icona azul cian. Valores posibeis\: aqua(auga), B(negriña), black(negro), blue(azul), Brown(marrón), cyan(azul cian), darkpurple(morado escuro), green(verde), idea, lightblue(azul claro), lightgreen(verde claro), orange(laranxa), pink(rosa), purple(morado), red(vermello), White(branco), yellow(amárelo)
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Mostra a mediana do prezo dos traspasos na páxina de Comparación de traspasos
@@ -79,6 +83,7 @@ foxtrick.ForumAlterHeaderLine.SmallHeaderFont.desc=Borra algúns espacios e usa 
 foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Comproba se unha liña simple de cabeceira estragará o deseño e a converte en duas liñas nesa mensaxe se é necesario. Esta opción ralentiza a presentación da páxina.
 foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Cambia a imaxe da estrela dos supporters por un *
 foxtrick.AddDefaultFaceCard.desc=Engade a cara predeterminada nas mensaxes das conferencias dos usuarios que non elixiran ningunha
+foxtrick.OriginalFace.desc=Amosar a cara orixinal dos xogadores
 foxtrick.OriginalFace.HideTransfer.desc=Amosa a cara normal nos xogadores que están á venda
 foxtrick.OriginalFace.HideInjury.desc=Amosa a cara normal nos xogadores lesionados
 foxtrick.OriginalFace.HideSuspended.desc=Amosa a cara normal nos xogadores que estean lesionados
@@ -120,6 +125,10 @@ foxtrick.ExtraShortcuts.desc=Engade iconas de ligazóns as iconas principais
 foxtrick.ExtraShortcuts.AddLeft.desc=Selecciona para engadir as iconas á esquerda, deselecciona para engadilas á dereita
 foxtrick.ExtraShortcuts.Supporterstats.desc=Icona de ligazón as estatísticas de supporter
 foxtrick.ExtraShortcuts.Transfers.desc=Icona de ligazón á páxina de transferencias do equipo propio
+foxtrick.ExtraShortcuts.Prefs.desc=Ligazón á páxina de preferencias
+foxtrick.ExtraShortcuts.ManageCHPP.desc=Ligazón á páxina de preferencias CHPP
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Ligazón á páxina de preferencias de FoxTrick
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Copia a ID do encontro cando se clica na icona de liga/copa/amigábel nos encontros ou no arquivo de encontros
 foxtrick.HeaderFix.desc=Amaña a cabeceira nos desprazamentos
@@ -142,6 +151,7 @@ foxtrick.TeamPopupLinks.Challenge.desc=Ligazón a retos
 foxtrick.TeamPopupLinks.Achievements.desc=Ligazón a logros
 foxtrick.TeamPopupLinks.TransferHistory.desc=Vai ó historial de traspasos
 foxtrick.TeamPopupLinks.LastLineup.desc=Vai á ultima aliñación
+foxtrick.TeamPopupLinks.YouthMatches.desc=Encontros dos xuvenís
 foxtrick.TeamPopupLinks.Coach.desc=Vai á páxina do adestrador
 foxtrick.TeamPopupLinks.CustomLink.desc=Ligazóns propias. As etiquetas [userid] e [teamid] se reemplazarán polas ids apropiadas
 foxtrick.SkillColoring.desc=Permite distinguir mellor as habilidades
@@ -184,6 +194,8 @@ foxtrick.TeamStats.Pictures.label=Imaxes
 #season stats
 #note to translators. use abreviations of league table where applicable
 
+foxtrick.seasonstats.friendly=Amigables
+foxtrick.seasonstats.cup=Copa
 
 
 #Newsfeed filter
@@ -339,10 +351,13 @@ match.pos.rcm=Mediocentro dereito
 match.pos.rcm.abbr=MCD
 match.pos.rw.abbr=ED
 
+match.role.captain=Capitán
 
 
+General=Xeral
 
 
+TSI.abbr=TSI
 
 
 Agreeability=Carácter
@@ -496,6 +511,8 @@ foxtrick.matches.suppstats=Estatísticas de supporter
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.ht-ml=Copiar en HT-ML
+copy.table=Copiar a tabla en HT-ML
 
 #teampopups
 Manager=Mánager
@@ -508,6 +525,8 @@ SendMessage=Enviar mensaxe
 Challenge=Retar
 Achievements=Logros
 TransferHistory=Historial de traspasos
+TeamHistory=Historia do clube
+NextMatch=Seguinte encontro
 LastLineup=Última aliñación
 more=máis...
 less=menos...
@@ -570,16 +589,21 @@ HTMSPrediction.team=Equipo
 
 #htms table of statistical truth
 truthTable.name=Equipo
+truthTable.difference=±
 
 # HTMSPoints
+HTMSPoints=Puntos HTMS\:
 HTMSPoints.AbilityAndPotential=Habilidade\: %1/Potencial\: %2
 
 # CrossTable
+CrossTable.graph=Gráficos da tempada
 # will be shown as "R13" denoting round 13
+CrossTable.noMatches=Aínda non se xogou ningún encontro.
 
 # MyMonitor
 MyMonitor.header=O meu monitor
 #following string uses pluralForms
+MyMonitor.add=Monitoriza este equipo
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.type.senior=Primeiro Equipo
 MyMonitor.type.youth=Xuvenil
@@ -626,8 +650,12 @@ pageAction.leftSidebar=Mostrar barra á esquerda
 pageAction.all=Mostrar todos
 
 # buttons
+button.ok=OK
+button.cancel=Cancelar
+button.close=Pechar
 button.save=Gardar
 button.go=ir a
+button.add=Engadir
 button.authorize=Autorizar
 button.export=Gardar
 button.import=Cargar
@@ -678,6 +706,8 @@ tab.forum=Conferencias
 tab.links=Ligazóns
 tab.about=Acerca de
 
+foxtrick.prefs.setup=Configuración
+foxtrick.prefs.setup.desc=Estes son os axustes que FoxTrick detectou. Si non é correcto, {denunciao por favor}.
 foxtrick.prefs.setup.locale=Lingua
 foxtrick.prefs.setup.dateFormat=Preferencias do formato da data
 foxtrick.prefs.setup.country=Preferencias do país
@@ -691,11 +721,20 @@ foxtrick.prefs.labelSavePrefs=Exportar opcións do foxtrick e as persoais
 foxtrick.prefs.labelSavePrefs_Prefs=Exportar opcións de foxtrick
 foxtrick.prefs.labelSavePrefs_Notes=Exportar opcións persoais (notas, plantiñas e ligazóns personalizadas)
 foxtrick.prefs.labelLoadPrefs=Importar opcións do foxtrick (Preferencias actuais se sobreescribirán. Require reinicio do navegador)
+foxtrick.prefs.loadNotice=Pega as túas preferencias gardadas na área de texto e prime "Importar" para importar as túas preferencias.
 foxtrick.prefs.captionDisableSettings=Desactivar Foxtrick
 foxtrick.prefs.stagepref=Desactivar Foxtrick no servidor Stage
 foxtrick.prefs.disableTemporaryLabel=Desactivar Foxtrick temporalmente
+foxtrick.prefs.saved=Preferencias gardadas\!
+foxtrick.prefs.loaded=Preferencias cargadas\!
+foxtrick.prefs.dismissNotice=(faga clic para desbotar este aviso)
 
+pref.xmlLoad=Carga os XMLs para obter información extra de Hattrick
 
+link.title=Ligazóns
+link.bugTracker=Reporta un bug
+link.hattrickForum=Conferencia de FoxTrick en Hattrick
+link.screenshots=Capturas de pantalla
 link.recentChanges=Trocos recentes
 
 module.link=Podes copiar e pegar este enlace na conferencia para dirixir aquí
