--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -76,7 +76,6 @@ foxtrick.ForumYouthIcons.youth_series.desc=Toon icoon voor YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergroot de tekstboxen om gemakkelijker berichten te schrijven
 foxtrick.ForumYouthIcons.pre.desc=Toon icoon voor forum 'pre' formaat (vaste spaties en afstanden)
 foxtrick.ForumYouthIcons.table.desc=Toon icoon voor tabel. Aangepast label accepteert Regular Expressions (Om  te krijgen, voeg nog een  toe, bijv. )
-foxtrick.ForumYouthIcons.symbols.desc=Voeg icoon toe voor symbolen hieronder. Scheid symbolen met punt-komma's. Om een punt-komma te gebruiken, type "/;"
 foxtrick.ForumYouthIcons.debug.desc=Toon icoon voor FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Toon icoon voor FoxTrick instellingen
 #FormatPostingText
@@ -376,7 +375,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Blijf op de opstellings-pagina na o
 foxtrick.MatchOrderInterface.SwapPositions.desc=Voeg een link toe om spelers over de as van het veld te wisselen.
 foxtrick.MatchSimulator.desc=Voeg een wedstrijden simulator toe aan de opstellings-pagina.
 foxtrick.MatchSimulator.RatingsOnTop.desc=Laat de ratings voorspelling bovenop de opstelling staan
-foxtrick.MatchSimulator.RatingsBellow.desc=Plaats de ratings voorspelling onder de opstelling
+foxtrick.MatchSimulator.RatingsBelow.desc=Plaats de ratings voorspelling onder de opstelling
 foxtrick.MatchSimulator.RatingsRight.desc=Plaats de ratings voorspelling rechts van de opstelling
 foxtrick.HeaderToggle.desc=Klik op bepaalde headers om de sectie te verbergen of juist te zien. Onthoudt de laatst gekozen instelling, gebaseerd op pagina & header titel.
 foxtrick.Filter.desc=Voeg filters toe aan de lijst met top spelers
