--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -376,7 +376,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Ramai in pagina de ordine meci dupa
 foxtrick.MatchOrderInterface.SwapPositions.desc=Adauga un link pentru a schimba jucatorii de la stanga la dreapta
 foxtrick.MatchSimulator.desc=Adauga un simulator de meci la pagina ordine meci.
 foxtrick.MatchSimulator.RatingsOnTop.desc=Pastreaza predictia ratingurilor deasupra.
-foxtrick.MatchSimulator.RatingsBellow.desc=Afiseaza predictia mai jos
+foxtrick.MatchSimulator.RatingsBelow.desc=Afiseaza predictia mai jos.
 foxtrick.MatchSimulator.RatingsRight.desc=Afiseaza predictia in dreapta.
 foxtrick.HeaderToggle.desc=Facand clic pe h2-headers activeaza afisarea si ascunderea din sectiunea urmatoare. Retine ultima setare bazata individual pe tipul paginii si titlul antetului.
 foxtrick.Filter.desc=Adauga filtre la pagina jucatori de top
