es-MX to es-CR (costa rica) since couldn't remove broken mx file on crowdin
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8490 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/htlang.xml
+++ b/content/locale/es-CR/htlang.xml
@@ -1,4 +1,4 @@
-<language name="es-MX" desc="Español, Centroamericano">
+<language name="es-CR" desc="Español, Centroamericano">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Mi Hattrick" />
