*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8491 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -76,6 +76,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Toon icoon voor YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergroot de tekstboxen om gemakkelijker berichten te schrijven
 foxtrick.ForumYouthIcons.pre.desc=Toon icoon voor forum 'pre' formaat (vaste spaties en afstanden)
 foxtrick.ForumYouthIcons.table.desc=Toon icoon voor tabel. Aangepast label accepteert Regular Expressions (Om  te krijgen, voeg nog een  toe, bijv. )
+foxtrick.ForumYouthIcons.symbols.desc=Voeg icoon toe voor symbolen hieronder. Scheid symbolen met punt-komma's. Om een punt-komma te gebruiken, type "/;"
 foxtrick.ForumYouthIcons.debug.desc=Toon icoon voor FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Toon icoon voor FoxTrick instellingen
 #FormatPostingText
