--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Значок для идентифик
 foxtrick.ForumYouthIcons.youth_series.desc=Значок для идентификатора юношеской лиги (YouthSeriesID)
 foxtrick.ForumYouthIcons.enlarge_input.desc=Увеличить размер полей ввода для удобства написания сообщения
 foxtrick.ForumYouthIcons.pre.desc=Значок для 'pre'-форматирования
-foxtrick.ForumYouthIcons.table.desc=Значок для таблицы. В тегах можно использовать регулярные выражения (символ '' должен быть заэкранирован дополнительным '', т.е. '').
+foxtrick.ForumYouthIcons.table.desc=Значок для таблицы. В тегах можно использовать регулярные выражения (символ ' должен быть заэкранирован дополнительным ', т.е. ').
 foxtrick.ForumYouthIcons.symbols.desc=Значок для вставки специальных символов. Резделяйте элементы точкой с запятой, для символа ';' используйте "/;".
 foxtrick.ForumYouthIcons.debug.desc=Значок для отладочного вывода FoxTrick
 foxtrick.ForumYouthIcons.settings.desc=Значок для настроек FoxTrick
