es.mx: forgot 2 files
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8493 1e3807c3-0949-0410-b78e-337b627472c1

--- a/maintainer/locale/ht-language-mapping.txt
+++ b/maintainer/locale/ht-language-mapping.txt
@@ -79,7 +79,7 @@ If lang = "es-ar" Then
 LanguageID = 51
 ElseIf lang = "es-cr" Then
 LanguageID = 103
-ElseIf lang = "es-mx" Then
+ElseIf lang = "es-cr" Then
 LanguageID = 103
 ElseIf lang = "es-do" Then
 LanguageID = 103
