--- a/content/locale/et/htlang.xml
+++ b/content/locale/et/htlang.xml
@@ -1,4 +1,4 @@
-<language name="ee" desc="Eesti">
+<language name="et" desc="Eesti">
 
 	<!-- the 6 strings from the hts menue line. used for language autodetection. copy "value"-->
 	<MyHattrick value="Minu Hattrick" />
