general qoute -> quote fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8504 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -80,7 +80,7 @@ foxtrick.ForumYouthIcons.debug.desc=Icon für FoxTrick debug log hinzufügen
 foxtrick.ForumYouthIcons.settings.desc=Icon für Foxtrickeinstellungen hinzufügen
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Verschachtelte Zitate ab einer gewissen Tiefe als Spoiler anzeigen. Die benötigte Tiefe der Verschachtelung bitte unten angeben.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Verschachtelte Zitate ab einer gewissen Tiefe als Spoiler anzeigen. Die benötigte Tiefe der Verschachtelung bitte unten angeben.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Erkennt Links zu Medien und bettet diese direkt in die Seite ein.
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=YouTube Videos einbetten
