--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -27,7 +27,7 @@ foxtrick.BookmarkAdjust.desc=Change the icon associated to a bookmark by enterin
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.symbols.desc=Adds icon for symbols below. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 #FormatPostingText
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Shows nested qoutes in a spoiler. Specify the level below.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Shows nested quotes in a spoiler. Specify the level below.
 #EmbedMedia
 #Forum direct page links
 #
@@ -88,7 +88,7 @@ foxtrick.TeamStats.NotPlayedLatest.label=Did not play in last match
 #special bbcode, not really youth icons
 
 
-ShowNestedQoutes=Show nested quotes  
+ShowNestedQuotes=Show nested quotes  
 
 #Transferlistfilters
 
