--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -80,7 +80,7 @@ foxtrick.ForumYouthIcons.debug.desc=Añade un ícono para el registro de depurac
 foxtrick.ForumYouthIcons.settings.desc=Añade un ícono para los ajustes de Foxtrick
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de Foxtrick por etiquetas HTML-Tags
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Mostrar las citas anidadas en un spoiler. Especificar el nivel abajo.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Mostrar las citas anidadas en un spoiler. Especificar el nivel abajo.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Detecta enlaces a archivos multimedia y los incrusta en el sitio. (Experimental)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Incurstar videos de YouTube 
@@ -517,7 +517,7 @@ ForumSpecialBBCode.forumSymbol=Insertar "%s"
 ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 
 
-ShowNestedQoutes=Mostrar citas anidadas
+ShowNestedQuotes=Mostrar citas anidadas
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Escriba el nombre del filtro\:
