--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -81,7 +81,7 @@ foxtrick.ForumYouthIcons.debug.desc=Prideda Foxtrick veiklos žurnalo (programuo
 foxtrick.ForumYouthIcons.settings.desc=Prideda Foxtrick nustatymų ikoną
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Pakeisti FoxTrick žymas HTML elementais (pvz., „pre“ – sumaketuoto teksto elementas)
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Rodyti kelis kartus percituotą tekstą slaptukuose. Nurodykite minimalų slėptinų citatų lygmenį.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Rodyti kelis kartus percituotą tekstą slaptukuose. Nurodykite minimalų slėptinų citatų lygmenį.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Automatiškai aptinka nuorodas į vaizdo rinkmenas ir įdeda jų peržiūrą. (Eksperimentinė funkcija)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Įdėti „YouTube“ rinkmenas
@@ -518,7 +518,7 @@ ForumSpecialBBCode.forumSymbol=Įterpti „%s“
 ForumSpecialBBCode.symbols=Įterpti simbolį\: „%s“
 
 
-ShowNestedQoutes=Rodyti citatas
+ShowNestedQuotes=Rodyti citatas
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Įveskite filtro pavadinimą\:
