--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -81,7 +81,7 @@ foxtrick.ForumYouthIcons.debug.desc=Toon icoon voor FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Toon icoon voor FoxTrick instellingen
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Vervang FoxTrick HT-ML tags door HTML tags (bv 'pre' element)
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Verberg geneste quotes in een 'spoiler' tag. Specificeer vanaf welk niveau dit moet gebeuren hieronder\:
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Verberg geneste quotes in een 'spoiler' tag. Specificeer vanaf welk niveau dit moet gebeuren hieronder\:
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Detecteert snelkoppelingen naar media bestanden en integreert deze in Hattrick. (Experimenteel\!)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Integreer YouTube filmpjes
@@ -518,7 +518,7 @@ ForumSpecialBBCode.forumSymbol=Voeg "%s" in
 ForumSpecialBBCode.symbols=Symbool invoegen\: %s
 
 
-ShowNestedQoutes=Toon geneste quotes
+ShowNestedQuotes=Toon geneste quotes
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Geef filternaam\:
