--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -81,7 +81,7 @@ foxtrick.ForumYouthIcons.debug.desc=Adauga pictograma pentru log-ul debug al Fox
 foxtrick.ForumYouthIcons.settings.desc=Adauga pictograma pentru setarile FoxTrick
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML (adica element 'pre')
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Arata quote-urile intr-un spoiler.Specificati mai jos nivelul.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Arata quote-urile intr-un spoiler.Specificati mai jos nivelul.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Detecteaza link-uri catre fisiere media si le incorporeaza in site. (Experimental)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Incorporeaza videouri YouTube
@@ -518,7 +518,7 @@ ForumSpecialBBCode.forumSymbol=Inserare "%s"
 ForumSpecialBBCode.symbols=Inserare simbol\: %s
 
 
-ShowNestedQoutes=Arata quote-urile imbricate  
+ShowNestedQuotes=Arata quote-urile imbricate  
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Introduceti numele filtrului\:
