--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -80,7 +80,7 @@ foxtrick.ForumYouthIcons.debug.desc=Додаје иконицу за 'FoxTrick L
 foxtrick.ForumYouthIcons.settings.desc=Додаје иконицу за постовање Фокстрик подешавања
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML тагове, HTML таговима (на пример: [pre] element) (за девелопере).
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Приказује цитате у постовима као споилер. Упишите број нивоа цитата који желите да буде замењен споилерима у поље испод.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Приказује цитате у постовима као споилер. Упишите број нивоа цитата који желите да буде замењен споилерима у поље испод.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Препознаје линкове ка медија фајловима и уграђује их директно у сајт. (Експериментална опција)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Угради YouTube видео клипове
@@ -517,7 +517,7 @@ ForumSpecialBBCode.forumSymbol=%s
 ForumSpecialBBCode.symbols=Убаци симбол: %s
 
 
-ShowNestedQoutes=Прикажи скривене цитате
+ShowNestedQuotes=Прикажи скривене цитате
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Упиши име за филтер:
