--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -14,8 +14,8 @@ properties.translators=_KOHb_ [teamId=28914]
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
-#some strings use plural forms. for rules and pluralFormRuleID ids see https://developer.mozilla.org/en/Localization_and_Plurals
-pluralFormRuleID=7
+#some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
+pluralFormRuleID=pluralFormRule7
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -1200,3 +1200,4 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Показывать протокол ра
 foxtrick.prefs.permissionsHint=Модулю %s нужно разрешение для работы. Дайте ему доступ в следующем диалоге.
 
 ###EOF
+
