Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8509 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1,6 +1,7 @@
-# SERBIAN language file (rXXXX)
-# utf-8 encoded SERBIAN language file sr-RS
-# By ljushaff
+#used by translators to keep track. not used with foxtrick atm
+properties.language=SERBIAN language file sr-RS
+properties.version=HEAD
+properties.translators=ljushaff
 
 # Hints:
 # translate the right side of the = sign.
